# modded-nanogpt

./: .clang-format  .gitignore  Dockerfile  Makefile  README.md  REFERENCE_SIZE.txt  TODO.txt  new_training_script.py  plot_vals.py  profile_ns5.py  pyproject.toml  run.sh  setup.py  test_hyperclone.py  test_kernels.py  test_normalize.py  train_gpt.py
csrc/muon/: muon.cpp  muon_cuda.cu  newton_schulz_cuda.cu
csrc/nanogpt/: muon.cpp  muon.cu  nanogpt.cpp  newton_schulz.cpp  newton_schulz.cu  newton_schulz.cuh  newton_schulz_cuda.cu  newton_schulz_kernel.cu  normalize.cu  normalize.cuh  normalize_kernel.cu
nanogpt/: __init__.py  dataloader.py  helpers.py  logging.py  nanogpt.py  training_utils.py
nanogpt/layers/: __init__.py  block.py  casted_linear.py  causal_self_attention.py  embedding.py  mlp.py  rotary.py
nanogpt/muon/: __init__.py  lambda_lr_scheduler.py  muon.py  newton_schulz.py
nanogpt/ops/: mm.py
tests/: test_hyperclone.py
